cros: Fix DCHECK for rlz_lib::UpdateExistingAccessPointRlz

|UpdateExistingAccessPointRlz| involves file I/O, so it should be
posted on a task runner that has MayBlock() in its TaskTraits.
|background_task_runner_| serves this purpose.

Bug: 906293
Change-Id: If36215767a0dbcfbad56c0432b16b584f6185376
Reviewed-on: https://chromium-review.googlesource.com/c/1340607
Reviewed-by: Roger Tawa <rogerta@chromium.org>
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609428}
Former-commit-id: 4da12d2dae516cbd8dd16fdb2da75b6662c382ae