components/rlz/rlz_tracker.cc
@@ -303,7 +303,12 @@ bool RLZTracker::Init(bool first_run,
       delegate_->IsBrandOrganic(reactivation_brand_)) {
     SYSLOG(INFO) << "RLZ is disabled";
   } else {
-    rlz_lib::UpdateExistingAccessPointRlz(brand_);
+    background_task_runner_->PostTask(
+        FROM_HERE, base::BindOnce(
+                       [](const std::string& brand) {
+                         rlz_lib::UpdateExistingAccessPointRlz(brand);
+                       },
+                       brand_));
   }
 #endif
 
